kubernetes_extended/ingress-nginx/lab/three_nginx_ingressclass_in_one_cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx1
  namespace: one
  labels:
    svc: nginx
    environment: prod
  annotations:
    author: cameda
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: service-nginx2
  namespace: two
  labels:
    svc: nginx
    environment: prod
  annotations:
    author: cameda
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: service-nginx3
  namespace: three
  labels:
    svc: nginx
    environment: prod
  annotations:
    author: cameda
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
